# Chat-Application-with-Client-Server

./: CMakeLists.txt  Client.cpp  README.md  Server.cpp
src/client/: ChatClient.cpp  ChatClient.h  client.cpp  main.cpp
src/server/: main.cpp  server.cpp  server.h
